k8s-manifests/base/ingress/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: tutum-app
spec:
  mtls:
    mode: STRICT
